# metis

./: .gitignore  AGENTS.md  Cargo.toml  alembic.ini  components.json  index.html  install.sh  package.json  pyproject.toml  vite.config.ts
metis-contract/: Cargo.toml
metis-contract/src/: branch.rs  channel.rs  error.rs  history.rs  lib.rs  metadata.rs  task.rs  worker.rs
metis-desktop/src-tauri/: .gitignore  tauri.conf.json
metis-server/: Cargo.toml
metis-server/src/: config.rs  main.rs  paths.rs  state.rs
notes/: DEVELOPER_NOTES_PHASE1.md
plans/: 001_planning.md  002_database_design_plan.md  003_mappings_plan.md  004_tauri_events_plan.md  005_desktop_command_stubs_plan.md  006_desktop_service_integration_plan.md  007_channels_repository_plan.md  008_channel_related_queries_plan.md  009_services_implementation_plan.md  010_repository_read_paths_plan.md  011_service_write_paths_plan.md  012_integration_tests_plan.md  013_desktop_adapter_command_tests_plan.md  014_desktop_event_emission_plan.md  015_frontend_invoke_client_plan.md  016_query_integration_plan.md  017_tanstack_db_sync_plan.md  018_ui_vertical_slice_plan.md  019_phase1_completion_hardening_plan.md
src/: main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 0001_init.sql  0002_seed_metadata.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/adapters/desktop/: commands.rs  errors.rs  events.rs  mod.rs  service.rs
src-tauri/src/agents/: mod.rs
src-tauri/src/app/: errors.rs  events.rs  mod.rs  requests.rs  response.rs  service.rs  use_cases.rs
src-tauri/src/branches/: mod.rs
src-tauri/src/channels/: mod.rs
src-tauri/src/commands/: branches.rs  channels.rs  errors.rs  events.rs  history.rs  mod.rs  service.rs  tasks.rs  workers.rs
src-tauri/src/core/: error.rs  id.rs  logging.rs  mod.rs  paths.rs  service_error.rs  time.rs
src-tauri/src/history/: mod.rs
src-tauri/src/runtime/: mod.rs
src-tauri/src/storage/: db.rs  mappings.rs  migrations.rs  mod.rs  repositories.rs
src-tauri/src/storage/models/: branch.rs  channel.rs  history.rs  metadata.rs  mod.rs  task.rs  worker.rs
src-tauri/src/tasks/: mod.rs
src-tauri/src/workers/: mod.rs
src-tauri/tests/: repository_service_flows.rs
(+38 files in other folders)
