[project]
name = "metis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.2",
    "orjson>=3.11.7",
    "typer>=0.24.1",
    "uvicorn>=0.42.0",
    "taskipy>=1.14.1",
    "platformdirs>=4.9.4",
    "aiojobs>=1.4.0",
    "sqlmodel>=0.0.38",
    "alembic>=1.18.4",
]

[project.scripts]
metis = "metis.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/metis"]

[dependency-groups]
dev = [
    "ruff>=0.15.8",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]  # errors, pyflakes, imports

[tool.taskipy.tasks]
# serve = "uvicorn --reload --app-dir src --reload-dir src --host 0.0.0.0 --port 8100 metis.rest.app:app"
serve = "metis start --dev"

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]
